# leslie

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac
src/: gui.cpp  gui.h  leslie.cpp  leslie.h  main.cpp  main.h  osc.cpp  osc.h  widget.cpp  widget.h
